--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.1.0",
+    "@types/axios": "^0.14.0",
     "@types/faker": "^6.6.9",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
@@ -30,5 +31,8 @@
     "lint-staged": "^12.4.2",
     "ts-jest": "^28.0.3",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
