--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/faker": "^6.6.9",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "eslint": "^8.16.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
@@ -33,6 +35,8 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
