--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "react/jsx-users-react": "error",
-    "react/jsx-users-vars": "error"
+    "react/jsx-users-vars": "error",
+    "@typescript-eslint/quotes": "off",
   }
 }
