--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "clean-react",
   "version": "1.0.0",
-  "description": "",
+  "description": "NodeJs Rest API using TDD,Clean Architecture and Typescript",
+  "author": "Ruth Maria",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
@@ -11,7 +12,6 @@
     "test:ci": "npm test -- --coverage"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.1.0",
